# ScannerHelper

./: AUTOSTART_GUIDE.md  AUTOSTART_SUMMARY.md  AUTO_REGISTER_GUIDE.md  CHANGELOG.md  CHANGES_SUMMARY.md  Cargo.toml  FINAL_SOLUTION.md  FIXED.md  HOW_TO_USE.md  QUICK_START.md  README.md  README_REAL_SCANNER.md  README_UPGRADE.md  README_WINDOWS.md  REAL_SCANNER_GUIDE.md  SCAN_UPGRADE.md  SIMPLE_START.md  STANDALONE_GUIDE.md  START_HERE.md  UPGRADE_NOTES.md  build.bat  check_services.bat  cross-compile.md  icon.ico.base64  index.html  install_full_startup.bat  install_startup.bat  php_service.vbs  scan_wia.ps1  scanner.js  scanner_service.vbs  start.bat  start_all_hidden.vbs  stop_services.bat  test_hidden.bat  uninstall_full_startup.bat  uninstall_startup.bat  upload.php
src/: main.rs  wia_real.rs
